--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -5,4 +5,41 @@
     z-index: 999;
     background-color: #ffffff;
     width: 100%;
+    height: 40px;
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.5);
+}
+
+.menu-bar__logo {
+    margin-left: 30px;
+    display: flex;
+    align-items: center;
+}
+
+.menu-bar__item {
+    display: flex;
+    margin: auto;
+    align-items: center;
+}
+
+.menu-bar__item > ul {
+    display: flex;
+    list-style-type: none;
+}
+
+.menu-bar__item > ul > li {
+    padding: 5px;
+    margin-right: 15px;
+}
+
+.menu-bar__item > ul > li > a {
+    text-decoration: none;
+    padding: 5px;
+    color: rgb(7, 7, 7);
+    font-family: 'Segoe UI';
+    font-weight: bold;
+}
+
+.menu-bar__item > ul > li > a:hover {
+    color: rgb(26, 26, 219);
+    font-weight: 500;
 }
