Card-label finished

--- a/src/app/components/card/card-label/card-label.component.html
+++ b/src/app/components/card/card-label/card-label.component.html
@@ -1,1 +1,5 @@
-<p>card-label works!</p>
+<div class="card-label__container">
+    <div class="carde-label__content">
+        <p>{{ gameLabel }}</p>
+    </div>
+</div>
