--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,6 @@
 <div class="home__container">
-    <app-card></app-card>
+    <app-card gameCover="assets/images/bt-1.jpg" gameLabel="DIGITAL" gameType="Digital | PS4" gamePrice="129,99" ></app-card>
+    <app-card gameCover="assets/images/bt-4.jpg" gameLabel="EXCLUSIVE" gameType="DISC | PS4" gamePrice="269,99" ></app-card>
+    <app-card gameCover="assets/images/ac-cover.jpg" gameLabel="EXCLUSIVE" gameType="DISC | PS4" gamePrice="139,99" ></app-card>
+    <app-card gameCover="assets/images/bt-hardline.jpg" gameLabel="DIGITAL" gameType="DISC | PS4" gamePrice="189,99" ></app-card>
 </div>
